fixing awkward spacing and line breaks in the desktop podcast description

--- a/less/cards/podcast-card.less
+++ b/less/cards/podcast-card.less
@@ -37,7 +37,7 @@
     .segment-audio-content {
 
         .podcast-description {
-            max-width: 24rem;
+            max-width: 40rem;
             margin: 0 auto;
             padding-bottom: 16px;
         }
